tests/comp/sem/invalid/assign_from_void.mj
class A {

	public void test() {
	}

	public static void main(String[] args) {
		A a = new A();
		/*** int x = a.test(); ***/
	}

}
